# eigen3-hdf5

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  LICENSE  README.rst  WORKSPACE  bazel-bin  bazel-eigen3-hdf5  bazel-genfiles  bazel-out  bazel-testlogs  eigen.BUILD  eigen3-hdf5-sparse.hpp  eigen3-hdf5.hpp  gtest.BUILD  hdf5.BUILD  sparseh5.py  zlib.BUILD
.github/workflows/: main.yml  unittests.yml
tools/: workspace.bzl
unittests/: BUILD  CMakeLists.txt  gtest-helpers.hpp  premake4.lua  test_Attribute.cpp  test_MatrixRoundTrip.cpp  test_Sparse.cpp  test_VectorRoundTrip.cpp
